tests/typecheck/fail/defer_never.tw
// Defer body must not have Never type.
fn foo() Int {
    defer return 0
    42
}
